Refactored code, added lombok, added some tests